improved back testing and front autocompletion